--- a/02-pod.yaml
+++ b/02-pod.yaml
@@ -1,10 +1,10 @@
-kind: pod
 apiVersion: v1
+kind: Pod
 metadata:
- name: nginx
+  name: nginx
 spec:
   containers:
   - name: nginx
-    image: nginx:1.14.2
-    ports:
-    - containerPort: 80
+    image: nginx:latest
+
+    
